Reduce the clutter and reword subheadings

--- a/index.html
+++ b/index.html
@@ -150,16 +150,12 @@
 											<div class="inner">
 												<ul class="feature-icons">
 													<li class="fa-js-square">JavaScript</li>
-													<li class="fa-database">SQL</li>
-													<li class="fa-envira">MongoDB</li>
-													<li class="fa-cog">Express JS</li>
 													<li class="fa-react">React JS</li>
 													<li class="fa-node-js">Node JS</li>
-													<li class="fa-dollar-sign">jQuery</li>
+													<li class="fa-cog">Express JS</li>
+													<li class="fa-envira">MongoDB</li>
+													<li class="fa-database">SQL</li>
 													<li class="fa-git-alt">Git</li>
-													<li class="fa-python">Python 3</li>
-													<li class="fa-wordpress">WordPress</li>
-													<li class="fa-bootstrap">Bootstrap</li>
 													<li class="fa-css3-alt">CSS3</li>
 													<li class="fa-sass">SASS</li>
 													<li class="fa-html5">HTML5</li>
@@ -178,8 +174,8 @@
 										<article>
 											<span class="image"><img src="images/pic01.jpg" alt="hands on a mac laptop keyboard shot from above" /></span>
 											<div class="inner">
-												<h4>Node JS & React JS Sites</h4>
-												<p>Note: you'll need to follow the npm commands for certain projects</p>
+												<h4>React JS & Node JS Sites</h4>
+												<p>I've poured out my heart and soul into these handful of projects.</p>
 												</p>
 												<ul class="feature-icons">
 													<li class="fa-react">
@@ -226,8 +222,8 @@
 												<img src="images/pic02.jpg" alt="man with colorful socks seated in a chair crossed-legged reading javascript & jquery" />
 											</span>
 											<div class="inner">
-												<h4>SQL and JavaScript Sites</h4>
-												<p>Since the beginning of April 2019, I have created sites with these technologies.
+												<h4>Vanilla JavaScript Sites</h4>
+												<p>I have created some sample sites with JS.
 												</p>
 												<ul class="feature-icons">
 													<li class="fa-js-square">
@@ -242,23 +238,24 @@
 													<li class="fa-js-square">
 														<a href="https://ms-coding-to-do-list.netlify.app/" target="_blank">To-Do List</a>
 													</li>
-													<li class="fa-database">
+													<!-- <li class="fa-database">
 														<a href="https://github.com/techieeliot/legendary-palm-tree" target="_blank">SQL CRUD Files</a>
-													</li>
+													</li> -->
 												</ul>
 											</div>
 										</article>
 										<article>
 											<span class="image"><img src="images/pic03.jpg" alt="stack of books with html & css book at the bottom" /></span>
 											<div class="inner">
-												<h4>Pure HTML, CSS, Bootstrap, jQuery Sites, and Tailwind CSS</h4>
-												<p>During the months of October 2018 through March 2019, I learned HTML and CSS.</p>
+												<h4>Pure HTML and CSS Sites</h4>
+												<p>I have mastered pure HTML and CSS through teaching others the basics.</p>
 												<ul class="feature-icons">
-													<li class="fa-dollar-sign">
+													<!-- <li class="fa-dollar-sign">
 														<a href="https://devsouth.us" target="_blank">jQuery devSouth Consulting, LLC</a>
 													</li>
 													<li class="fa-stream">
 														<a href="https://github.com/techieeliot/mentors-scaling-garbanzo" target="_blank">Tailwind CSS Example Page</a>
+													</li> -->
 													<li class="fa-css3">
 														<a href="https://freecodecampjxn.github.io/flexbox-example/" target="_blank">CSS Flexbox freeCodeCamp Jackson, MS</a>
 													</li>
@@ -268,7 +265,7 @@
 												</ul>
 											</div>
 										</article>
-										<article>
+										<!-- <article>
 											<span class="image"><img src="images/pic04.jpg" alt="WordPress on a computer screen" /></span>
 											<div class="inner">
 												<h4>WordPress & Wix Sites</h4>
@@ -292,7 +289,7 @@
 													
 												</ul>	
 											</div>
-										</article>
+										</article> -->
 										<article>
 												<a href="https://www.youtube.com/embed/URwNDebE32I" target="_blank">
 													<span class="image"><img src="images/coding-class-express.png" alt="Coding class express poster at the Bolden Moore Library on March 7, 2020" /></span>
