Add guest lecture link

--- a/index.html
+++ b/index.html
@@ -307,6 +307,9 @@
 													<li class="fa-laptop-code">
 														<a href="https://www.w3develops.org/" target="_blank">Developer In Residence at w3Develops</a>
 													</li>
+													<li class="fa-chalkboard-teacher">
+														<a href="https://twitter.com/bluesatch/status/1100474207933222922?s=20" target="_blank">Guest Lecturer at Mississippi Coding Academy</a>
+													</li>
 												</ul>
 											</div>
 										</article>
