Reword about me and teaching section

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 					<ul class="icons">
 						<li><a href="https://twitter.com/techieEliot" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.linkedin.com/in/techieeliot/" class="icon fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://www.facebook.com/eliot.b.sanford" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/techieeliot/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<!-- <li><a href="https://www.facebook.com/eliot.b.sanford" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/techieeliot/" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
 						<li><a href="https://github.com/techieeliot" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:techieEliot@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
@@ -109,21 +109,26 @@
 										<p class="bio-section">I'm currently seeking a full-time JavaScript role and provide consultation
 											for small businesses as a React.js software engineering contractor.
 										</p>
-										<p class="bio-section">I taught myself to code five years, and since then, I've always been learning 
-											on my own including developing automated tasks at work, creating personal projects, and 
-											organizing virtual and in-person study groups. 
+										<p class="bio-section">I've been teaching myself code over the past five years. 
+											My passion for programming started when I was automating tasks 
+											in one of my previous roles as database support at law firms. Since discovering the magic of programming, I've consistently been learning 
+											on my own and have grown my skillset to include front-end and back-end web development.
 										</p>
-										<p class="bio-section">I taught myself front-end and back-end 
-											web development while working as support staff at law firms, 
-											then I left the legal world to begin teaching a high school web development course. 
+										<p class="bio-section"> I've poured myself into countless hours of self-study and joined online study groups 
+											in my spare time where I could share knowledge with others.
+											My passions for sharing my knowledge led me to become a meetup organizer, a workshop instructor, 
+											and, eventually, a high school web development teacher.
 										</p>
 										<p class="bio-section">In 2018, I started working for myself as a tech consultant, 
-											where I enjoy building websites, tools, and applications for businesses. 
-											At the end of 2019, I joined a local back-end coding bootcamp program in the 
-											evenings to mainly fill some knowledge gaps in 
-											my back-end programming skills.
+											where I have the pleasure of building websites, tools, and applications for businesses. 
+											In the Spring of 2020, I completed a local back-end coding bootcamp program to mainly fill some knowledge gaps in 
+											my back-end programming skills and receive career counselling. 
 										</p>
-										<p class="bio-section">Please review my portfolio and resumé. I appreciate that you've read this far and would love to chat with you.</p>
+										<p class="bio-section">To this day, 
+											I enjoy ever increasing my skills through creating personal projects, 
+											organizing coding study groups, and delivering web apps to clients.
+											Please review my portfolio and resumé below to see some of those projects. 
+											I appreciate that you've read this far and would love to chat with you.</p>
 										<div class="inner hide-resumé">
 											<iframe id="resumé-box" src="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/preview" width="600" height="700"></iframe>
 										</div>
@@ -295,7 +300,7 @@
 													<span class="image"><img src="images/coding-class-express.png" alt="Coding class express poster at the Bolden Moore Library on March 7, 2020" /></span>
 												</a>
 											<div class="inner">
-												<h4>Learning Experiences</h4>
+												<h4>Teaching & Mentor Experiences</h4>
 												<p>Since 2018, I have been an instructor and mentor to others</p>
 												<ul class="feature-icons">
 													<li class="fa-free-code-camp">
@@ -749,8 +754,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<ul class="icons">
 								<li><a href="https://twitter.com/techieEliot" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.linkedin.com/in/techieeliot/" class="icon fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://www.facebook.com/eliot.b.sanford" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.instagram.com/techieeliot/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+								<!-- <li><a href="https://www.facebook.com/eliot.b.sanford" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/techieeliot/" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
 								<li><a href="https://github.com/techieeliot" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:techieEliot@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
