Fix spelling of resume and classes

--- a/index.html
+++ b/index.html
@@ -127,16 +127,16 @@
 										<p class="bio-section">To this day, 
 											I enjoy ever increasing my skills through creating personal projects, 
 											organizing coding study groups, and delivering web apps to clients.
-											Please review my portfolio and resumé below to see some of those projects. 
+											Please review my portfolio and résumé below to see some of those projects. 
 											I appreciate that you've read this far and would love to chat with you.</p>
-										<div class="inner hide-resumé">
-											<iframe id="resumé-box" src="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/preview" width="600" height="700"></iframe>
+										<div class="inner hide-résumé">
+											<iframe id="résumé-box" src="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/preview" width="600" height="700"></iframe>
 										</div>
 										<div class="inner">
-											<ul class="feature-icons view-resumé">	
+											<ul class="feature-icons view-résumé">	
 												<li>
 													<a href="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/view" role="button" target="_blank" rel="noopener noreferrer" class="button primary fit icon fa-external-link-alt">
-														View my Resumé
+														View my Résumé
 													</a>
 												</li>
 											</ul>
