Add resume nav link

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 						<li><a href="#three">Things I Have Created</a></li>
 						<li><a href="#four">Things Developers Have Said</a></li>
 						<li><a href="#five">Contact Me</a></li>
+						<li><a href="#six">View my Résumé</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -124,7 +125,7 @@
 											In the Spring of 2020, I completed a local back-end coding bootcamp program to mainly fill some knowledge gaps in 
 											my back-end programming skills and receive career counselling. 
 										</p>
-										<p class="bio-section">To this day, 
+										<p id="six" class="bio-section">To this day, 
 											I enjoy ever increasing my skills through creating personal projects, 
 											organizing coding study groups, and delivering web apps to clients.
 											Please review my portfolio and résumé below to see some of those projects. 
