--- a/index.html
+++ b/index.html
@@ -761,8 +761,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								<li><a href="mailto:techieEliot@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; 2020. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>
-								</li>
+								<li> &copy; <span class="copyright-year"></span>. All Rights Reserved.</li>
+								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
