--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 								<div class="container">
 									<header class="major">
 										<h2>Eliot Sanford</h2>
-										<p class="monospace">Software Engineering Contractor</p>
+										<p class="monospace">React Front-End<br>
+											Software Engineer</p>
 									</header>
 									<article>
 										<h3>Welcome to my portfolio page!</h3>
@@ -107,28 +108,37 @@
 											</ul>
 										</div>
 										<h3 id="one">Things About Me</h3>
-										<p class="bio-section">I'm currently seeking a full-time JavaScript role and provide consultation
-											for small businesses as a React.js software engineering contractor.
+										<p class="bio-section">I'm currently seeking a full-time React Front-End Software Engineer role 
+											and work as an engineer at Lowes.com as React.js software engineer.
 										</p>
-										<p class="bio-section">I've been teaching myself code over the past five years. 
+										<p class="bio-section">I've been int IT over the past nine years and have worked in 
+											a web developer for over six years. I've worked with JavaScript for four years, and within
+											React for the past three years. During 2019, I wanted gain a full-stack skill set, so I attended
+											a Back-End Coding Bootcamp to learn Node JS and MySQL in combination with React.
+										</p>
+										<p class="bio-section">
 											My passion for programming started when I was automating tasks 
-											in one of my previous roles as database support at law firms. Since discovering the magic of programming, I've consistently been learning 
-											on my own and have grown my skillset to include front-end and back-end web development.
+											in one of my previous roles as database support at law firms. 
+											Since discovering the magic of programming, I've consistently been learning 
+											on my own and have grown my skills to include front-end and back-end web development.
 										</p>
-										<p class="bio-section"> I've poured myself into countless hours of self-study and joined online study groups 
-											in my spare time where I could share knowledge with others.
-											My passions for sharing my knowledge led me to become a meetup organizer, a workshop instructor, 
-											and, eventually, a high school web development teacher.
+										<p class="bio-section"> When I was learning to code, I would pour countless hours of self-study and 
+											joined online study groups in my spare time where I could share knowledge with others.
+											My passions for sharing my knowledge led me to become a meetup organizer and a workshop instructor.
 										</p>
-										<p class="bio-section">In 2018, I started working for myself as a tech consultant, 
-											where I have the pleasure of building websites, tools, and applications for businesses. 
-											In the Spring of 2020, I completed a local back-end coding bootcamp program to mainly fill some knowledge gaps in 
-											my back-end programming skills and receive career counselling. 
+										<p class="bio-section">I started working as web developer, 
+											where I had the pleasure of building websites, tools, and applications for businesses. 
+											The experiences helped me gain some startup client where I build apps for Fourth Party, MJ Group, the Gorilla Fund,
+											and Dare2Share Live.
+										</p>
+										<p class="bio-section">
+											Around the end of 2020, I landed my first enterprise-level experience with Lowe's
+											as a Front-End Software Engineer. With Lowe's I've worked within the Pricing & Promotions team and have led 
+											have lead efforts for badges, rebates, and features like price per item. With badging alone my work was 
+											able to produce an increase in revenue by nine million dollars per week.
 										</p>
 										<p id="six" class="bio-section">To this day, 
-											I enjoy ever increasing my skills through creating personal projects, 
-											organizing coding study groups, and delivering web apps to clients.
-											Please review my portfolio and résumé below to see some of those projects. 
+											Please review my portfolio and resume below to see some of those projects. 
 											I appreciate that you've read this far and would love to chat with you.</p>
 										<div class="inner hide-résumé">
 											<iframe id="résumé-box" src="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/preview" width="600" height="700"></iframe>
@@ -137,7 +147,7 @@
 											<ul class="feature-icons view-résumé">	
 												<li>
 													<a href="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/view" role="button" target="_blank" rel="noopener noreferrer" class="button primary fit icon fa-external-link-alt">
-														View my Résumé
+														View my Resume
 													</a>
 												</li>
 											</ul>
@@ -159,7 +169,6 @@
 													<li class="fa-react">React JS</li>
 													<li class="fa-node-js">Node JS</li>
 													<li class="fa-cog">Express JS</li>
-													<li class="fa-envira">MongoDB</li>
 													<li class="fa-database">SQL</li>
 													<li class="fa-git-alt">Git</li>
 													<li class="fa-css3-alt">CSS3</li>
@@ -328,9 +337,31 @@
 									<div class="inner">
 										<h3>Things Developers Have Said</h3>
 										<blockquote>
-											<p>I've known Eliot for a few years, having attended church together. Eliot is not only of great moral character, but also a tenacious individual in the pursuit of his goals. </p>
-											<p>Eliot approached me wanting to learn about software development just a couple of years ago, and in a short time has learned far more about the topic than I came close to in my first two years — and all of this while just learning in his free time and also having a wife and children.</p>
-											<p>Eliot is and will continue to be a great contributor to society. He has a positive attitude, a willingness to learn, and a determination to accomplish whatever is in front of him.</p>
+											<p>
+												Eliot is a highly motivated developer and problem solver with an above average ability to learn quickly. I've worked
+												through a lot of his code and it is the type of stuff you see come out of engineers with many years more experience than
+												he has under his belt. 
+											</p>
+											<p>
+												I look forward to the opportunity to work with Eliot in the near future, and recommend anyone who
+												has a chance to bring him onto their team, you will not be disappointed.
+											</p>
+										</blockquote>
+											<p>May 2020</p>
+											<p>- Nader Dabit, Developer Relations and Software Engineer and Conference Speaker</p>
+										<a href="https://twitter.com/dabit3" role="button" class="button alt icon fa-twitter small">@dabit3</a>
+										<a href="mailto:dabit3@gmail.com" role="button" class="button alt icon fa-envelope small">dabit3@gmail.com</a>
+										<hr>
+										<blockquote>
+											<p>
+												I've known Eliot for a few years, having attended church together. Eliot is not only of great moral character, but also a tenacious individual in the pursuit of his goals. 
+											</p>
+											<p>
+												Eliot approached me wanting to learn about software development just a couple of years ago, and in a short time has learned far more about the topic than I came close to in my first two years — and all of this while just learning in his free time and also having a wife and children.
+											</p>
+											<p>
+												Eliot is and will continue to be a great contributor to society. He has a positive attitude, a willingness to learn, and a determination to accomplish whatever is in front of him.
+											</p>
 										</blockquote>
 										<p>May 2020</p>
 										<p>- J.C. Hiatt, Software Engineer and Conference/Meetup Organizer</p>
@@ -340,17 +371,35 @@
 										<blockquote>
 											<p>I had the great pleasure of teaching Eliot at the Mississippi Coding Academy where I have been the night class instructor since the beginning of the year. 
 												He is a fast learner, an inspiring student, and a helpful peer.</p>
-											<p>When we started working on group projects in class, Eliot was extremely helpful both in the questions 
-												he asked and the actions he took, rolling his chair over to classmates (back when that was a thing) and 
-												helping them along. He would then continue working on the project after class, planning out next steps, 
-												finding which issues could help other students grow, and developing new questions for the next lecture. 
-												Eliot is someone who is genuinely motivated to understand problems and help teams get to solutions.
-											</p>	
-											<p>If you need any more specific information please do not hesitate to email me, and I would be happy to elaborate further.</p>											
-										</blockquote>
-										<p>August 2020</p>
-										<p>- Levi, Senior Software Engineer and Bootcamp Instructor</p>
+												<p>When we started working on group projects in class, Eliot was extremely helpful both in the questions 
+													he asked and the actions he took, rolling his chair over to classmates (back when that was a thing) and 
+													helping them along. He would then continue working on the project after class, planning out next steps, 
+													finding which issues could help other students grow, and developing new questions for the next lecture. 
+													Eliot is someone who is genuinely motivated to understand problems and help teams get to solutions.
+												</p>	
+												<p>If you need any more specific information please do not hesitate to email me, and I would be happy to elaborate further.</p>											
+											</blockquote>
+											<p>August 2020</p>
+											<p>- Levi, Senior Software Engineer and Bootcamp Instructor</p>
+										<hr>
 										<a href="mailto:Levi.Ross.King@gmail.com" role="button" class="button alt icon fa-envelope small">Levi.Ross.King@gmail.com</a>
+										<blockquote>
+											<p>
+												You will be hard stretched to find an engineer as passionately proactive as Eliot! From the high quality enterprise
+												grade code he writes, to his incredibly useful documentation efforts - he is one of those people that you WANT to have
+												in your circle of colleagues.
+											</p>
+											<p>
+												Pairing his subject matter expertise with his instructional skills and emotional intelligence, he will undoubtedly be a
+												great mentor to any seeking knowledge or advice!
+											
+											</p>
+												If you ever have the pleasure of working alongside this standout professional, consider yourself lucky! I can’t wait to
+											</p>
+										</blockquote>
+										<p>July 2021</p>
+										<p>- Alex Wright, Lead Software Engineer</p>
+										<a href="mailto:jawright94@gmail.com " role="button" class="button alt icon fa-envelope small">jawright94@gmail.com</a>
 									</div>
 								</div>
 							</section>
