--- a/index.html
+++ b/index.html
@@ -108,38 +108,49 @@
 											</ul>
 										</div>
 										<h3 id="one">Things About Me</h3>
-										<p class="bio-section">I'm currently seeking a full-time React Front-End Software Engineer role 
-											and work as an engineer at Lowes.com as React.js software engineer.
+										<p class="bio-section">
+											I'm currently seeking a full-time React Front-End Software Engineer role 
+											and work as an engineer at Lowes.com as a React.js software engineer.
 										</p>
-										<p class="bio-section">I've been int IT over the past nine years and have worked in 
-											a web developer for over six years. I've worked with JavaScript for four years, and within
-											React for the past three years. During 2019, I wanted gain a full-stack skill set, so I attended
+										<p class="bio-section">
+											I've been in IT over for over nine years and have worked as 
+											a web developer over six years. I've worked with JavaScript for over four years, and within
+											React over three years. I wanted to gain a full-stack skill set, so I attended
 											a Back-End Coding Bootcamp to learn Node JS and MySQL in combination with React.
 										</p>
 										<p class="bio-section">
 											My passion for programming started when I was automating tasks 
-											in one of my previous roles as database support at law firms. 
+											in one of my previous roles as a database technologist at a law firm. 
 											Since discovering the magic of programming, I've consistently been learning 
 											on my own and have grown my skills to include front-end and back-end web development.
 										</p>
-										<p class="bio-section"> When I was learning to code, I would pour countless hours of self-study and 
+										<p class="bio-section">
+											When I was learning to code, I would pour countless hours of self-study and 
 											joined online study groups in my spare time where I could share knowledge with others.
-											My passions for sharing my knowledge led me to become a meetup organizer and a workshop instructor.
-										</p>
-										<p class="bio-section">I started working as web developer, 
-											where I had the pleasure of building websites, tools, and applications for businesses. 
-											The experiences helped me gain some startup client where I build apps for Fourth Party, MJ Group, the Gorilla Fund,
-											and Dare2Share Live.
+											My passions for sharing my knowledge led me to volunteer in many ways including as a meetup organizer and a workshop instructor.
 										</p>
 										<p class="bio-section">
-											Around the end of 2020, I landed my first enterprise-level experience with Lowe's
-											as a Front-End Software Engineer. With Lowe's I've worked within the Pricing & Promotions team and have led 
-											have lead efforts for badges, rebates, and features like price per item. With badging alone my work was 
+											I started working as a web developer, 
+											building websites, tools, and applications for businesses. 
+											The experiences helped me gain some startup clients where I built apps for Fourth Party, MJ Group, the Gorilla Fund,
+											and Dare2Share Live among others.
+										</p>
+										<p class="bio-section">
+											I landed my first enterprise-level experience with Lowe's
+											as a Front-End Software Engineer. I've worked within the Pricing & Promotions team and have led
+											efforts for badging, rebates, and features like price per item. With badging alone my work was 
 											able to produce an increase in revenue by nine million dollars per week.
 										</p>
-										<p id="six" class="bio-section">To this day, 
+										<p id="six" class="bio-section">
 											Please review my portfolio and resume below to see some of those projects. 
-											I appreciate that you've read this far and would love to chat with you.</p>
+											I appreciate that you've read this far and would love to chat with you. 
+										</p>
+										<p>
+											Recruiters, please reach out to me on LinkedIn. 
+											I don't respond to phone calls from numbers that I don't know, and 
+											don't reply to cold emails from recruiters until I've
+											gotten to know them better via LinkedIn direct messages.
+										</p>
 										<div class="inner hide-résumé">
 											<iframe id="résumé-box" src="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/preview" width="600" height="700"></iframe>
 										</div>
@@ -165,15 +176,19 @@
 											<a href="#" class="image"><img src="images/pic00.jpg" alt="web development books next to a small cactus" /></a>
 											<div class="inner">
 												<ul class="feature-icons">
-													<li class="fa-js-square">JavaScript</li>
-													<li class="fa-react">React JS</li>
-													<li class="fa-node-js">Node JS</li>
-													<li class="fa-cog">Express JS</li>
-													<li class="fa-database">SQL</li>
-													<li class="fa-git-alt">Git</li>
-													<li class="fa-css3-alt">CSS3</li>
-													<li class="fa-sass">SASS</li>
-													<li class="fa-html5">HTML5</li>
+													<li class="fa-react" aria-hidden="true">React JS</li>
+													<li class="fa-node-js" aria-hidden="true">Node JS</li>
+													<li class="fa-cog" aria-hidden="true">Express JS</li>
+													<li class="fa-js-square" aria-hidden="true">JavaScript</li>
+													<li class="fa-book" aria-hidden="true">Storybook</li>
+													<li class="fa-cutlery" aria-hidden="true">Jenkins</li>
+													<li class="fa-ship" aria-hidden="true">Spinnaker</li>
+													<li class="fa-database" aria-hidden="true">SQL</li>
+													<li class="fa-git-alt" aria-hidden="true">Git</li>
+													<li class="fa-keyboard-o" aria-hidden="true">Vim</li>
+													<li class="fa-css3-alt" aria-hidden="true">CSS3</li>
+													<li class="fa-sass" aria-hidden="true">SASS</li>
+													<li class="fa-html5" aria-hidden="true">HTML5</li>
 												</ul>
 											</div>
 										</article>
