fix: fix font awesome icons

--- a/index.html
+++ b/index.html
@@ -181,11 +181,12 @@
 													<li class="fa-cog" aria-hidden="true">Express JS</li>
 													<li class="fa-js-square" aria-hidden="true">JavaScript</li>
 													<li class="fa-book" aria-hidden="true">Storybook</li>
-													<li class="fa-cutlery" aria-hidden="true">Jenkins</li>
+													<li class="fa-caret-down" aria-hidden="true">Jest</li>
+													<li class="fa-user" aria-hidden="true">Jenkins</li>
 													<li class="fa-ship" aria-hidden="true">Spinnaker</li>
 													<li class="fa-database" aria-hidden="true">SQL</li>
 													<li class="fa-git-alt" aria-hidden="true">Git</li>
-													<li class="fa-keyboard-o" aria-hidden="true">Vim</li>
+													<li class="fa fa-keyboard-o" aria-hidden="true">Vim</li>
 													<li class="fa-css3-alt" aria-hidden="true">CSS3</li>
 													<li class="fa-sass" aria-hidden="true">SASS</li>
 													<li class="fa-html5" aria-hidden="true">HTML5</li>
