fix: edit recommendations

--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@
 												has a chance to bring him onto their team, you will not be disappointed.
 											</p>
 										</blockquote>
-											<p>May 2020</p>
-											<p>- Nader Dabit, Developer Relations and Software Engineer and Conference Speaker</p>
+											<p>December 2020</p>
+											<p>- Nader Dabit, Developer Relations, Software Engineer and Conference Speaker</p>
 										<a href="https://twitter.com/dabit3" role="button" class="button alt icon fa-twitter small">@dabit3</a>
 										<a href="mailto:dabit3@gmail.com" role="button" class="button alt icon fa-envelope small">dabit3@gmail.com</a>
 										<hr>
@@ -380,7 +380,7 @@
 											</p>
 										</blockquote>
 										<p>May 2020</p>
-										<p>- J.C. Hiatt, Software Engineer and Conference/Meetup Organizer</p>
+										<p>- J.C. Hiatt, Software Enginee and Conference/Meetup Organizer</p>
 										<a href="https://twitter.com/jchiatt" role="button" class="button alt icon fa-twitter small">@jchiatt</a>
 										<a href="mailto:jc@jchiatt.com" role="button" class="button alt icon fa-envelope small">jc@jchiatt.com</a>
 										<hr>
@@ -397,8 +397,8 @@
 											</blockquote>
 											<p>August 2020</p>
 											<p>- Levi, Senior Software Engineer and Bootcamp Instructor</p>
-										<hr>
-										<a href="mailto:Levi.Ross.King@gmail.com" role="button" class="button alt icon fa-envelope small">Levi.Ross.King@gmail.com</a>
+											<a href="mailto:Levi.Ross.King@gmail.com" role="button" class="button alt icon fa-envelope small">Levi.Ross.King@gmail.com</a>
+											<hr>
 										<blockquote>
 											<p>
 												You will be hard stretched to find an engineer as passionately proactive as Eliot! From the high quality enterprise
@@ -411,6 +411,8 @@
 											
 											</p>
 												If you ever have the pleasure of working alongside this standout professional, consider yourself lucky! I can’t wait to
+												see the phenomenal work Eliot will go on to accomplish in his career and I can only hope I get the opportunity to work
+												with him again.
 											</p>
 										</blockquote>
 										<p>July 2021</p>
