fix: fix header

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
 								<div class="container">
 									<header class="major">
 										<h2>Eliot Sanford</h2>
-										<p class="monospace">React Front-End</p>
-										<p class="monospace">Software Engineer</p>
+										<p class="monospace">React Front-End
+										<br>Software Engineer</p>
+										<hr>
 									</header>
 									<article>
 										<h3>Welcome to my portfolio page!</h3>
