--- a/index.html
+++ b/index.html
@@ -65,8 +65,11 @@
 									<header class="major">
 										<h2>Eliot Sanford</h2>
 										<p class="monospace">React Front-End
-										<br>Software Engineer</p>
-										<hr>
+										<br>
+										<br>
+										Software Engineer</p>
+										<br>
+										<br>
 									</header>
 									<article>
 										<h3>Welcome to my portfolio page!</h3>
