--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<li><a href="#three">Things I Have Created</a></li>
 						<li><a href="#four">Things Developers Have Said</a></li>
 						<li><a href="#five">Contact Me</a></li>
-						<li><a href="#six">View my Résumé</a></li>
+						<li><a href="#six">View my Resume</a></li>
 					</ul>
 				</nav>
 				<footer>
