--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 											and work as an engineer at Lowes.com as a React.js software engineer.
 										</p>
 										<p class="bio-section">
-											I've been in IT over for over nine years and have worked as 
+											I've been in IT for over nine years and have worked as 
 											a web developer over six years. I've worked with JavaScript for over four years, and within
 											React over three years. I wanted to gain a full-stack skill set, so I attended
 											a Back-End Coding Bootcamp to learn Node JS and MySQL in combination with React.
