fix: change vim font and fix typo

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 											</p>
 										</blockquote>
 										<p>May 2020</p>
-										<p>- J.C. Hiatt, Software Enginee and Conference/Meetup Organizer</p>
+										<p>- J.C. Hiatt, Software Engineer and Conference/Meetup Organizer</p>
 										<a href="https://twitter.com/jchiatt" role="button" class="button alt icon fa-twitter small">@jchiatt</a>
 										<a href="mailto:jc@jchiatt.com" role="button" class="button alt icon fa-envelope small">jc@jchiatt.com</a>
 										<hr>
