feat: add view my resume header

--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
 											efforts for badging, rebates, and features like price per item. With badging alone my work was 
 											able to produce an increase in revenue by nine million dollars per week.
 										</p>
-										<p id="six" class="bio-section">
+										<h3 id="six">View My Resume</h3>
+										<p class="bio-section">
 											Please review my portfolio and resume below to see some of those projects. 
 											I appreciate that you've read this far and would love to chat with you. 
 										</p>
