feat: reduce about section and add new icons

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>Eliot Sanford</h2>
-										<p class="monospace">React Front-End
+										<p class="monospace">Senior React Front-End
 										Software Engineer</p>
 										<br>
 										<br>
@@ -112,36 +112,13 @@
 										<h3 id="one">Things About Me</h3>
 										<p class="bio-section">
 											I'm currently seeking a full-time React Front-End Software Engineer role 
-											and work as an engineer at Lowes.com as a React.js software engineer.
+											and work as an senior engineer at IDEMIA and previously at Lowes.com as a React.js software engineer.
 										</p>
 										<p class="bio-section">
 											I've been in IT for over nine years and have worked as 
 											a web developer over six years. I've worked with JavaScript for over four years, and within
 											React over three years. I wanted to gain a full-stack skill set, so I attended
 											a Back-End Coding Bootcamp to learn Node JS and MySQL in combination with React.
-										</p>
-										<p class="bio-section">
-											My passion for programming started when I was automating tasks 
-											in one of my previous roles as a database technologist at a law firm. 
-											Since discovering the magic of programming, I've consistently been learning 
-											on my own and have grown my skills to include front-end and back-end web development.
-										</p>
-										<p class="bio-section">
-											When I was learning to code, I would pour countless hours of self-study and 
-											joined online study groups in my spare time where I could share knowledge with others.
-											My passions for sharing my knowledge led me to volunteer in many ways including as a meetup organizer and a workshop instructor.
-										</p>
-										<p class="bio-section">
-											I started working as a web developer, 
-											building websites, tools, and applications for businesses. 
-											The experiences helped me gain some startup clients where I built apps for Fourth Party, MJ Group, the Gorilla Fund,
-											and Dare2Share Live among others.
-										</p>
-										<p class="bio-section">
-											I landed my first enterprise-level experience with Lowe's
-											as a Front-End Software Engineer. I've worked within the Pricing & Promotions team and have led
-											efforts for badging, rebates, and features like price per item. With badging alone my work was 
-											able to produce an increase in revenue by nine million dollars per week.
 										</p>
 										<h3 id="six">View My Resume</h3>
 										<p class="bio-section">
@@ -185,6 +162,7 @@
 													<li class="fa-js-square" aria-hidden="true">JavaScript</li>
 													<li class="fa-book" aria-hidden="true">Storybook</li>
 													<li class="fa-caret-down" aria-hidden="true">Jest</li>
+													<li class="fa-docker" aria-hidden="true">Docker</li>
 													<li class="fa-user" aria-hidden="true">Jenkins</li>
 													<li class="fa-ship" aria-hidden="true">Spinnaker</li>
 													<li class="fa-database" aria-hidden="true">SQL</li>
@@ -192,6 +170,7 @@
 													<li class="fa fa-keyboard-o" aria-hidden="true">Vim</li>
 													<li class="fa-css3-alt" aria-hidden="true">CSS3</li>
 													<li class="fa-sass" aria-hidden="true">SASS</li>
+													<li class="fa-bootstrap" aria-hidden="true">Bootstrap</li>
 													<li class="fa-html5" aria-hidden="true">HTML5</li>
 												</ul>
 											</div>
@@ -224,9 +203,9 @@
 													<li class="fa-react">
 														<a href="https://markdown-editor-techieeliot.netlify.app" target="_blank">Markdown Previewer</a>
 													</li>
-													<li class="fa-react">
+													<!-- <li class="fa-react">
 														<a href="https://countries-techieeliot.netlify.app" target="_blank">Countries + Weather APIs</a>
-													</li>
+													</li> -->
 													<li class="fa-react">
 														<a href="https://phonebook-techieeliot.netlify.app" target="_blank">Phonebook App</a>
 													</li>
