feat: change resume url

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<li><a href="#three">Things I Have Created</a></li>
 						<li><a href="#four">Things Developers Have Said</a></li>
 						<li><a href="#five">Contact Me</a></li>
-						<li><a href="#six">View my Resume</a></li>
+						<li><a href="#resume">View my Resume</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -120,7 +120,7 @@
 											React over three years. I wanted to gain a full-stack skill set, so I attended
 											a Back-End Coding Bootcamp to learn Node JS and MySQL in combination with React.
 										</p>
-										<h3 id="six">View My Resume</h3>
+										<h3 id="resume">View My Resume</h3>
 										<p class="bio-section">
 											Please review my portfolio and resume below to see some of those projects. 
 											I appreciate that you've read this far and would love to chat with you. 
