fix: add paragraph styling to match

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 											Please review my portfolio and resume below to see some of those projects. 
 											I appreciate that you've read this far and would love to chat with you. 
 										</p>
-										<p>
+										<p class="bio-section">
 											Recruiters, please reach out to me on LinkedIn. 
 											I don't respond to phone calls from numbers that I don't know, and 
 											don't reply to cold emails from recruiters until I've
