--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
 										</p>
 										<h3 id="resume">View My Resume</h3>
 										<p class="bio-section">
-											Please review my portfolio and resume below to see some of those projects. 
+											Please review my portfolio and resume below to see some of my projects. 
 											I appreciate that you've read this far and would love to chat with you. 
 										</p>
 										<p class="bio-section">
-											Recruiters, please reach out to me on LinkedIn. 
+											👋 Recruiters, please reach out to me on LinkedIn. 
 											I don't respond to phone calls from numbers that I don't know, and 
 											don't reply to cold emails from recruiters until I've
 											gotten to know them better via LinkedIn direct messages.
