--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<h1 id="logo">
 						<a href="#banner">Eliot Sanford</a>
 					</h1>
-					<p class="monospace">Software Engineering Contractor</p>
+					<p class="monospace">React Software Engineer</p>
 				</header>
 				<nav id="nav">
 					<ul>
