--- a/index.html
+++ b/index.html
@@ -9,33 +9,38 @@
 		<title>Eliot Sanford's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!-- Primary Meta Tags -->
-		<title>Meta Tags — Preview, Edit and Generate</title>
-		<meta name="title" content="Meta Tags — Preview, Edit and Generate">
-		<meta name="description"
-			content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
-		
-		<!-- Open Graph / Facebook -->
-		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://metatags.io/">
-		<meta property="og:title" content="Meta Tags — Preview, Edit and Generate">
-		<meta property="og:description"
-			content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
-		<meta property="og:image"
-			content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
-		
-		<!-- Twitter -->
-		<meta property="twitter:card" content="summary_large_image">
-		<meta property="twitter:url" content="https://metatags.io/">
-		<meta property="twitter:title" content="Meta Tags — Preview, Edit and Generate">
-		<meta property="twitter:description"
-			content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
-		<meta property="twitter:image"
-			content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
-			
 		<link rel="icon" href="./images/favicon.ico" sizes="64x64" type="image/x-icon">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://kit.fontawesome.com/e661112737.js" crossorigin="anonymous"></script>
+		<!-- Primary Meta Tags -->
+		<title>Eliot Sanford's Portfolio</title>
+		<meta name="title" content="Eliot Sanford's Portfolio">
+		<meta name="description"
+			content="I'm currently seeking a full-time React Front-End Software Engineer role.
+		
+		I've been in IT for over nine years and have worked as a web developer for over six years. I've worked with JavaScript for over four years, and within React for over three years.">
+		
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://techieliot.com">
+		<meta property="og:title" content="Eliot Sanford's Portfolio">
+		<meta property="og:description"
+			content="I'm currently seeking a full-time React Front-End Software Engineer role.
+		
+		I've been in IT for over nine years and have worked as a web developer for over six years. I've worked with JavaScript for over four years, and within React for over three years.">
+		<meta property="og:image"
+			content="images/eliot-sanford-react-software-engineer.png">
+		
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://techieeliot.com">
+		<meta property="twitter:title" content="Eliot Sanford's Portfolio">
+		<meta property="twitter:description"
+			content="I'm currently seeking a full-time React Front-End Software Engineer role.
+		
+		I've been in IT for over nine years and have worked as a web developer for over six years. I've worked with JavaScript for over four years, and within React for over three years.">
+		<meta property="twitter:image"
+			content="images/eliot-sanford-react-software-engineer.png">
 	</head>
 	<body class="is-preload">
 
@@ -139,10 +144,10 @@
 											and work as an senior engineer at IDEMIA and previously at Lowes.com as a React.js software engineer.
 										</p>
 										<p class="bio-section">
-											I've been in IT for over nine years and have worked as 
-											a web developer over six years. I've worked with JavaScript for over four years, and within
-											React over three years. I wanted to gain a full-stack skill set, so I attended
-											a Back-End Coding Bootcamp to learn Node JS and MySQL in combination with React.
+											I've been in IT for over nine years and have worked as a web developer for over six years. 
+											I've worked with JavaScript for over four years, and within React for over three years. 
+											I wanted to gain a full-stack skill set, so I attended a Back-End Coding Bootcamp to learn 
+											Node JS and MySQL in combination with React.
 										</p>
 										<h3 id="resume">View My Resume</h3>
 										<p class="bio-section">
