feat: update meta image url

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		
 		I've been in IT for over nine years and have worked as a web developer for over six years. I've worked with JavaScript for over four years, and within React for over three years.">
 		<meta property="og:image"
-			content="images/eliot-sanford-react-software-engineer.png">
+			content="https://techieeliot.com/images/eliot-sanford-react-software-engineer.png">
 		
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image">
@@ -40,7 +40,7 @@
 		
 		I've been in IT for over nine years and have worked as a web developer for over six years. I've worked with JavaScript for over four years, and within React for over three years.">
 		<meta property="twitter:image"
-			content="images/eliot-sanford-react-software-engineer.png">
+			content="https://techieeliot.com/images/eliot-sanford-react-software-engineer.png">
 	</head>
 	<body class="is-preload">
 
