fix: update meta description

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 		<meta property="og:description"
 			content="I'm currently seeking a full-time React Front-End Software Engineer role.
 		
-		I've been in IT for over nine years and have worked as a web developer for over six years. I've worked with JavaScript for over four years, and within React for over three years.">
+		I've been in IT for over nine years and have worked as a web developer for over six years. I've worked with JavaScript for over four years, and within React for over three years.
+		
+		Inquiries please message me via my portfolio site contact form.">
 		<meta property="og:image"
 			content="https://techieeliot.com/images/eliot-sanford-react-software-engineer.png">
 		
@@ -38,7 +40,9 @@
 		<meta property="twitter:description"
 			content="I'm currently seeking a full-time React Front-End Software Engineer role.
 		
-		I've been in IT for over nine years and have worked as a web developer for over six years. I've worked with JavaScript for over four years, and within React for over three years.">
+		I've been in IT for over nine years and have worked as a web developer for over six years. I've worked with JavaScript for over four years, and within React for over three years.
+		
+		Inquiries please message me via my portfolio site contact form.">
 		<meta property="twitter:image"
 			content="https://techieeliot.com/images/eliot-sanford-react-software-engineer.png">
 	</head>
