fix: update Twitter meta url

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 		<!-- Primary Meta Tags -->
 		<title>Eliot Sanford's Portfolio</title>
 		<meta name="title" content="Eliot Sanford's Portfolio">
-		<meta name="description"
-			content="I'm currently seeking a full-time React Front-End Software Engineer role.
+		<meta name="description" content="I'm currently seeking a full-time React Front-End Software Engineer role.
 		
-		I've been in IT for over nine years and have worked as a web developer for over six years. I've worked with JavaScript for over four years, and within React for over three years.">
+		I've been in IT for over nine years and in web development for over six years. I've worked with JavaScript for over four years, and within React for over three years.
+		
+		Inquiries please message me via my portfolio site contact form.">
 		
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://techieliot.com">
+		<meta property="og:url" content="https://techieeliot.com/">
 		<meta property="og:title" content="Eliot Sanford's Portfolio">
-		<meta property="og:description"
-			content="I'm currently seeking a full-time React Front-End Software Engineer role.
+		<meta property="og:description" content="I'm currently seeking a full-time React Front-End Software Engineer role.
 		
-		I've been in IT for over nine years and have worked as a web developer for over six years. I've worked with JavaScript for over four years, and within React for over three years.
+		I've been in IT for over nine years and in web development for over six years. I've worked with JavaScript for over four years, and within React for over three years.
 		
 		Inquiries please message me via my portfolio site contact form.">
 		<meta property="og:image"
@@ -35,12 +35,11 @@
 		
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image">
-		<meta property="twitter:url" content="https://techieeliot.com">
+		<meta property="twitter:url" content="https://techieeliot.com/">
 		<meta property="twitter:title" content="Eliot Sanford's Portfolio">
-		<meta property="twitter:description"
-			content="I'm currently seeking a full-time React Front-End Software Engineer role.
+		<meta property="twitter:description" content="I'm currently seeking a full-time React Front-End Software Engineer role.
 		
-		I've been in IT for over nine years and have worked as a web developer for over six years. I've worked with JavaScript for over four years, and within React for over three years.
+		I've been in IT for over nine years and in web development for over six years. I've worked with JavaScript for over four years, and within React for over three years.
 		
 		Inquiries please message me via my portfolio site contact form.">
 		<meta property="twitter:image"
