--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		
 		Inquiries please message me via my portfolio site contact form.">
 		<meta property="twitter:image"
-			content="https://techieeliot.com/images/eliot-sanford-react-software-engineer.png">
+			content="https://github.com/techieeliot/Eliot-Sanford-Portfolio/blob/master/images/eliot-sanford-react-software-engineer.png">
 	</head>
 	<body class="is-preload">
 
