--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 			content="https://techieeliot.com/images/eliot-sanford-react-software-engineer.png">
 		
 		<!-- Twitter -->
-		<meta property="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" value="@techieeliot" />
+		<meta name="twitter:card" value="summary_large_image">
 		<meta property="twitter:url" content="https://techieeliot.com/">
 		<meta property="twitter:title" content="Eliot Sanford's Portfolio">
 		<meta property="twitter:description" content="I'm currently seeking a full-time React Front-End Software Engineer role.
