fix: shorten description to match page content

--- a/index.html
+++ b/index.html
@@ -25,11 +25,8 @@
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://techieeliot.com/">
 		<meta property="og:title" content="Eliot Sanford's Portfolio">
-		<meta property="og:description" content="I'm currently seeking a full-time React Front-End Software Engineer role.
-		
-		I've been in IT for over nine years and in web development for over six years. I've worked with JavaScript for over four years, and within React for over three years.
-		
-		Inquiries please message me via my portfolio site contact form.">
+		<meta property="og:description" content="View My Resume
+			Please review my portfolio and resume below to see some of my projects.">
 		<meta property="og:image"
 			content="https://techieeliot.com/images/eliot-sanford-react-software-engineer.png">
 		
@@ -38,11 +35,8 @@
 		<meta name="twitter:card" value="summary_large_image">
 		<meta property="twitter:url" content="https://techieeliot.com/">
 		<meta property="twitter:title" content="Eliot Sanford's Portfolio">
-		<meta property="twitter:description" content="I'm currently seeking a full-time React Front-End Software Engineer role.
-		
-		I've been in IT for over nine years and in web development for over six years. I've worked with JavaScript for over four years, and within React for over three years.
-		
-		Inquiries please message me via my portfolio site contact form.">
+		<meta property="twitter:description" content="View My Resume
+			Please review my portfolio and resume below to see some of my projects.">
 		<meta property="twitter:image"
 			content="https://github.com/techieeliot/Eliot-Sanford-Portfolio/blob/master/images/eliot-sanford-react-software-engineer.png">
 	</head>
