fix: add minor twitter url meta tweak

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<!-- Twitter -->
 		<meta name="twitter:site" value="@techieeliot" />
 		<meta name="twitter:card" value="summary_large_image">
-		<meta property="twitter:url" content="https://techieeliot.com/">
+		<meta property="twitter:url" content="https://techieeliot.com/#resume">
 		<meta property="twitter:title" content="Eliot Sanford's Portfolio">
 		<meta property="twitter:description" content="View My Resume
 			Please review my portfolio and resume below to see some of my projects.">
