--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 		<!-- Twitter -->
 		<meta name="twitter:site" value="@techieeliot" />
 		<meta name="twitter:card" value="summary_large_image">
-		<meta property="twitter:url" content="https://techieeliot.com/#resume">
+		<meta property="twitter:url" content="https://techieeliot.com">
 		<meta property="twitter:title" content="Eliot Sanford's Portfolio">
 		<meta property="twitter:description" content="View My Resume
 			Please review my portfolio and resume below to see some of my projects.">
 		<meta property="twitter:image"
-			content="https://github.com/techieeliot/Eliot-Sanford-Portfolio/blob/master/images/eliot-sanford-react-software-engineer.png">
+			content="https://techieeliot.com/images/eliot-sanford-react-software-engineer.png">
 	</head>
 	<body class="is-preload">
 
