--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 		<meta name="twitter:card" value="summary_large_image">
 		<meta property="twitter:url" content="https://techieeliot.com">
 		<meta property="twitter:title" content="Eliot Sanford's Portfolio">
-		<meta property="twitter:description" content="View My Resume
-			Please review my portfolio and resume below to see some of my projects.">
+		<meta property="twitter:description" content="Eliot Sanford
+Senior React Front-End Software Engineer">
 		<meta property="twitter:image"
 			content="https://techieeliot.com/images/eliot-sanford-react-software-engineer.png">
 	</head>
