fix: restart trying to fix the meta tags

--- a/index.html
+++ b/index.html
@@ -15,28 +15,45 @@
 		<!-- Primary Meta Tags -->
 		<title>Eliot Sanford's Portfolio</title>
 		<meta name="title" content="Eliot Sanford's Portfolio">
-		<meta name="description" content="I'm currently seeking a full-time React Front-End Software Engineer role.
+		<meta name="description" content="Eliot Sanford
+		Senior React Front-End Software Engineer
 		
-		I've been in IT for over nine years and in web development for over six years. I've worked with JavaScript for over four years, and within React for over three years.
 		
-		Inquiries please message me via my portfolio site contact form.">
+		
+		Welcome to my portfolio page!
+		I'm excited to share with you some things about me, what I can do, and have created, plus some comments from other engineers.
+		
+		Please browse below and contact me via the form at the bottom of this page, Twitter, LinkedIn,or my email.">
 		
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://techieeliot.com/">
 		<meta property="og:title" content="Eliot Sanford's Portfolio">
-		<meta property="og:description" content="View My Resume
-			Please review my portfolio and resume below to see some of my projects.">
+		<meta property="og:description" content="Eliot Sanford
+		Senior React Front-End Software Engineer
+		
+		
+		
+		Welcome to my portfolio page!
+		I'm excited to share with you some things about me, what I can do, and have created, plus some comments from other engineers.
+		
+		Please browse below and contact me via the form at the bottom of this page, Twitter, LinkedIn,or my email.">
 		<meta property="og:image"
 			content="https://techieeliot.com/images/eliot-sanford-react-software-engineer.png">
 		
 		<!-- Twitter -->
-		<meta name="twitter:site" value="@techieeliot" />
-		<meta name="twitter:card" value="summary_large_image">
-		<meta property="twitter:url" content="https://techieeliot.com">
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://techieeliot.com>
 		<meta property="twitter:title" content="Eliot Sanford's Portfolio">
 		<meta property="twitter:description" content="Eliot Sanford
-Senior React Front-End Software Engineer">
+		Senior React Front-End Software Engineer
+		
+		
+		
+		Welcome to my portfolio page!
+		I'm excited to share with you some things about me, what I can do, and have created, plus some comments from other engineers.
+		
+		Please browse below and contact me via the form at the bottom of this page, Twitter, LinkedIn,or my email.">
 		<meta property="twitter:image"
 			content="https://techieeliot.com/images/eliot-sanford-react-software-engineer.png">
 	</head>
