fix: comment out some meta tags

--- a/index.html
+++ b/index.html
@@ -46,16 +46,10 @@
 		<meta property="twitter:url" content="https://techieeliot.com>
 		<meta property="twitter:title" content="Eliot Sanford's Portfolio">
 		<meta property="twitter:description" content="Eliot Sanford
-		Senior React Front-End Software Engineer
-		
-		
-		
-		Welcome to my portfolio page!
-		I'm excited to share with you some things about me, what I can do, and have created, plus some comments from other engineers.
-		
-		Please browse below and contact me via the form at the bottom of this page, Twitter, LinkedIn,or my email.">
-		<meta property="twitter:image"
-			content="https://techieeliot.com/images/eliot-sanford-react-software-engineer.png">
+		Senior React Front-End Software Engineer	
+		Welcome to my portfolio page!">
+		<!-- <meta property="twitter:image" -->
+			<!-- content="https://techieeliot.com/images/eliot-sanford-react-software-engineer.png"> -->
 	</head>
 	<body class="is-preload">
 
