fix: uncomment meta tag for the image on twitter

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 		<meta property="twitter:description" content="Eliot Sanford
 		Senior React Front-End Software Engineer	
 		Welcome to my portfolio page!">
-		<!-- <meta property="twitter:image" -->
-			<!-- content="https://techieeliot.com/images/eliot-sanford-react-software-engineer.png"> -->
+		<meta property="twitter:image"
+			content="https://techieeliot.com/images/eliot-sanford-react-software-engineer.png"> 
 	</head>
 	<body class="is-preload">
 
