fix: correct typo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image">
-		<meta property="twitter:url" content="https://techieeliot.com>
+		<meta property="twitter:url" content="https://techieeliot.com/">
 		<meta property="twitter:title" content="Eliot Sanford's Portfolio">
 		<meta property="twitter:description" content="Eliot Sanford
 		Senior React Front-End Software Engineer	
