--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
 											I appreciate that you've read this far and would love to chat with you. 
 										</p>
 										<p class="bio-section">
-											👋 Recruiters, please reach out to me on LinkedIn. 
-											I don't respond to phone calls from numbers that I don't know, and 
-											don't reply to cold emails from recruiters until I've
-											gotten to know them better via LinkedIn direct messages.
+											👋 Hiring managers and recruiters, inquiries should go through my contact form.
+										  Please allow me to get to know you. As a general rule, I don't respond to unknown phone numbers, and 
+											don't reply to cold emails until I've gotten to know them better. 
+											The contact form allows me to sort through inquiries best. Thank you!
 										</p>
 										<div class="inner hide-résumé">
 											<iframe id="résumé-box" src="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/preview" width="600" height="700"></iframe>
