fix: add internal link for contact form

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 											👋 Hiring managers and recruiters, inquiries should go through my contact form.
 										  Please allow me to get to know you. As a general rule, I don't respond to unknown phone numbers, and 
 											don't reply to cold emails until I've gotten to know them better. 
-											The contact form allows me to sort through inquiries best. Thank you!
+											The <a href="#four">contact form</a> allows me to sort through inquiries best. Thank you!
 										</p>
 										<div class="inner hide-résumé">
 											<iframe id="résumé-box" src="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/preview" width="600" height="700"></iframe>
