fix: added the missed link

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 											I appreciate that you've read this far and would love to chat with you. 
 										</p>
 										<p class="bio-section">
-											👋 Hiring managers and recruiters, inquiries should go through my contact form.
+											👋 Hiring managers and recruiters, inquiries should go through <a href="#four">my contact form</a>.
 										  Please allow me to get to know you. As a general rule, I don't respond to unknown phone numbers, and 
 											don't reply to cold emails until I've gotten to know them better. 
 											The <a href="#four">contact form</a> allows me to sort through inquiries best. Thank you!
